# c-project

./: .indent.pro  .ycm_extra_conf.py  BuildAndExecute.sh  CMakeLists.txt  Jenkinsfile  README.md  first.c  makefile  tags
app/: CMakeLists.txt
app/src/as/meas/: measctrl.h
app/src/as/meas/src/: measctrl.c
app/src/fos/: config.h
app/src/sms/: sysctrl.h
app/src/sms/src/: main.c  sysctrl.c
app/src/ui/terminal/: uitask.h
app/src/ui/terminal/src/: uitask.c
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/corefnct/math/src/: fw_multiplication.c.func-sort-c.html  fw_multiplication.c.func.html  fw_multiplication.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/corefnct/math/test/: index-sort-f.html  index-sort-l.html  index.html  testsmultiplication.cpp.func-sort-c.html  testsmultiplication.cpp.func.html  testsmultiplication.cpp.gcov.html
coverage/math/src/: index-sort-f.html  index-sort-l.html  index.html  sqroot.c.func-sort-c.html  sqroot.c.func.html  sqroot.c.gcov.html
coverage/math/test/: index-sort-f.html  index-sort-l.html  index.html  testsqroot.cpp.func-sort-c.html  testsqroot.cpp.func.html  testsqroot.cpp.gcov.html
fw/: CMakeLists.txt
fw/src/fos/: config.h  dbg.h  error.h  fw_macros.h  typedef.h  units.h
fw/src/fos/corefnct/math/: fw_math.h
fw/src/fos/corefnct/math/src/: fw_memory.c  fw_multiplication.c  fw_scrc.c  fw_xorcs.c
fw/src/fos/corefnct/math/test/: testsmultiplication.cpp
fw/src/fos/math/: sqroot.h
fw/src/fos/math/test/: testsqroot.cpp
fw/src/fos/os/: syscallint.h
fw/src/fos/os/src/: syscallint.c
fw/src/fos/os/test/: testsyscallint.cpp
src/: main.c
src/fos/: print.c  print.h  ringbuffer.c  ringbuffer.h
src/fos/math/src/: .sqroot.c.swp  sqroot.c
src/fos/math/test/: .testsqroot.cpp.swp
src/fos/strlib/string/: bstraux.lo  bstrlib.lo  libbstring.la
src/fos/strlib/string/.deps/: bstraux.Plo  bstrlib.Plo
src/fos/strlib/string/.libs/: libbstring.lai  libbstring.so.0.0.0
src/sms/: main.c
